// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverrideYamlValues runtimefields tests Render empty if no runtime fields 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--flex"
    style="width: 150px;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--margin-bottom-small"
    >
      cd.manifestId
      : 
    </p>
  </div>
</div>
`;

exports[`OverrideYamlValues runtimefields tests Render runtime fields if gitfetchtype is commitid 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--flex"
    style="width: 150px;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--margin-bottom-small"
    >
      cd.manifestId
      : 
      Test
    </p>
  </div>
  <div
    class="formGroup md"
  >
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
        for="stages[0].stage.spec.execution.steps[0].step.spec.overrides[0].spec.store.spec.commitId"
      >
        pipeline.manifestType.commitId
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
        >
          <div
            class="bp3-input-group MultiTypeInput--input"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="stages[0].stage.spec.execution.steps[0].step.spec.overrides[0].spec.store.spec.commitId"
              type="text"
              value=""
            />
          </div>
          <span
            class="bp3-popover-wrapper MultiTypeInput--wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="MultiTypeInput--btn MultiTypeInput--FIXED"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="fixed-input"
                >
                  <svg
                    height="12"
                    viewBox="0 0 9 9"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverrideYamlValues runtimefields tests Render runtime fields in run pipeline form 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--flex"
    style="width: 150px;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--margin-bottom-small"
    >
      cd.manifestId
      : 
      Test
    </p>
  </div>
  <div
    class="connectorLabel"
  >
    <div
      class="StyledProps--font StyledProps--main"
      style="margin-bottom: 5px;"
    >
      connector
    </div>
    <div
      style="display: flex; align-items: center;"
    >
      <div
        class="bp3-form-group"
        style="margin-bottom: 0px;"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            style="width: 400px;"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-testid="cr-field-stages[0].stage.spec.execution.steps[0].step.spec.overrides[0].spec.store.spec.connectorRef"
              style="width: 400px;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <span
                  class="placeholder"
                >
                  select
                </span>
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="formGroup md"
  >
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
        for="stages[0].stage.spec.execution.steps[0].step.spec.overrides[0].spec.store.spec.branch"
      >
        pipelineSteps.deploy.inputSet.branch
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
        >
          <div
            class="bp3-input-group MultiTypeInput--input"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="stages[0].stage.spec.execution.steps[0].step.spec.overrides[0].spec.store.spec.branch"
              type="text"
              value=""
            />
          </div>
          <span
            class="bp3-popover-wrapper MultiTypeInput--wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="MultiTypeInput--btn MultiTypeInput--FIXED"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="fixed-input"
                >
                  <svg
                    height="12"
                    viewBox="0 0 9 9"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="formGroup md"
  >
    <div>
      <div
        class="label"
      >
        filePaths
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
        style="width: 100%;"
      >
        <div
          class="group"
        >
          <div
            style="flex-grow: 1;"
          >
            <div
              class="TextInput--main"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  data-testid="value-stages[0].stage.spec.execution.steps[0].step.spec.overrides[0].spec.store.spec.paths-[0]"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            data-testid="remove-stages[0].stage.spec.execution.steps[0].step.spec.overrides[0].spec.store.spec.paths-[0]"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="main-trash"
            >
              <svg
                height="20"
                viewBox="0 0 16 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
          </button>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
          data-testid="add-stages[0].stage.spec.execution.steps[0].step.spec.overrides[0].spec.store.spec.paths"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            plusAdd
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
